@@ -1,6 +1,7 @@
 package com.bookservice.gametimebooking.service;
 
 import com.bookservice.gametimebooking.dto.HouseDto;
+import com.bookservice.gametimebooking.exceptions.HouseNotFoundException;
 import com.bookservice.gametimebooking.mapper.HouseMapper;
 import com.bookservice.gametimebooking.model.House;
 import com.bookservice.gametimebooking.model.Company;
@@ -11,7 +12,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -21,10 +21,11 @@ public class HouseService {
     private HouseRepository houseRepository;
     private CompanyRepository companyRepository;
     private HouseMapper houseMapper;
+    private static final String HOUSE_NOT_FOUND_ERROR_MESSAGE = "House not found";
 
     public HouseDto createHouse(HouseDto houseDto) {
         Company company = companyRepository.findById(houseDto.getCompanyId())
-                .orElseThrow(() -> new RuntimeException("Company not found"));
+                .orElseThrow(() -> new HouseNotFoundException(HOUSE_NOT_FOUND_ERROR_MESSAGE));
 
         House house = houseMapper.toEntity(houseDto);
 
@@ -36,18 +37,20 @@ public class HouseService {
     }
 
     public List<HouseDto> getAllHouses() {
-        return houseRepository.findAll().stream().map(houseMapper::toDto).collect(Collectors.toList());
+        return houseRepository.findAll().stream()
+                .map(houseMapper::toDto)
+                .toList();
     }
 
     public HouseDto getHouseById(Long id) {
         House house = houseRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("House not found"));
+                .orElseThrow(() -> new HouseNotFoundException(HOUSE_NOT_FOUND_ERROR_MESSAGE));
         return houseMapper.toDto(house);
     }
 
     public void overwriteHouseById(Long id, HouseDto houseDto) {
         House house = houseRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("House not found"));
+                .orElseThrow(() -> new HouseNotFoundException(HOUSE_NOT_FOUND_ERROR_MESSAGE));
 
         house.setAddress(houseDto.getAddress());
 
@@ -56,7 +59,7 @@ public class HouseService {
 
     public void deleteById(Long id) {
         if (!houseRepository.existsById(id)) {
-            throw new RuntimeException("House not found");
+            throw new HouseNotFoundException(HOUSE_NOT_FOUND_ERROR_MESSAGE);
         }
         houseRepository.deleteById(id);
     }
